[gd_scene load_steps=2 format=3 uid="uid://c2p2m7p4y3w1q"]

[ext_resource type="Script" path="res://scripts/UI/pause_popup.gd" id="1_1p4a0"]

[node name="PausePopup" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1p4a0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/Content"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
horizontal_alignment = 1
text = "Pause"

[node name="ContinueButton" type="Button" parent="Panel/Content"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Continue"

[node name="MenuButton" type="Button" parent="Panel/Content"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Back to Menu"
